Hireforce/objects/Interviewer__c.object
<CustomObject>
    <fields>
        <fullName>Available_Slots__c</fullName>
        <label>Available Slots</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8:00 AM - 9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM - 10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM - 11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM - 12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM - 1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM - 2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM - 3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM - 4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM - 5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM - 6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM - 7:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_for_Hiring_Event__c</fullName>
        <label>Available for Hiring Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Interviewing Profile</relationshipLabel>
        <relationshipName>My_Interviewing_Profile</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hiring_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Event</label>
        <referenceTo>Hiring_Event__c</referenceTo>
        <relationshipLabel>Interviewers</relationshipLabel>
        <relationshipName>Interviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interviewers Managed by Me</relationshipLabel>
        <relationshipName>Interviewers_Managed_by_Me</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewing_Rounds__c</fullName>
        <inlineHelpText>Please select the rounds which are assessed by this interviewer</inlineHelpText>
        <label>Interviewing Rounds</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technical Interview - Initial</fullName>
                </value>
                <value>
                    <fullName>Technical Interview - Advanced</fullName>
                </value>
                <value>
                    <fullName>Phone Interview</fullName>
                </value>
                <value>
                    <fullName>HR Interview</fullName>
                </value>
                <value>
                    <fullName>Behavioural Interview</fullName>
                </value>
                <value>
                    <fullName>Panel Interview</fullName>
                </value>
                <value>
                    <fullName>Case Study Interview</fullName>
                </value>
                <value>
                    <fullName>Coding Challenge</fullName>
                </value>
                <value>
                    <fullName>Aptitude Test</fullName>
                </value>
                <value>
                    <fullName>Group Discussion</fullName>
                </value>
                <value>
                    <fullName>Final Interview</fullName>
                </value>
                <value>
                    <fullName>On-site Interview</fullName>
                </value>
                <value>
                    <fullName>Managerial Interview</fullName>
                </value>
                <value>
                    <fullName>Executive Interview</fullName>
                </value>
                <value>
                    <fullName>Offer Discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interviewer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hiring_Event__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Employee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interviewer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Provide_Available_Slots_for_Hiring_event</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Available_for_Hiring_Event__c ,&apos;Yes&apos;), ISBLANK(Available_Slots__c) )</errorConditionFormula>
        <errorDisplayField>Available_Slots__c</errorDisplayField>
        <errorMessage>Please provide available slots for hiring event.</errorMessage>
    </validationRules>
</CustomObject>